Fixed layout shift from lazy loading images

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -189,6 +189,31 @@ p, li {
   transform: rotate(90deg);
 }
 
+.ar-3-2, .ar-3-2 img {
+  aspect-ratio: 3/2;
+}
+.ar-16-33, .ar-16-33 img {
+  aspect-ratio: 16/33;
+}
+.ar-640-321, .ar-640-321 img {
+  aspect-ratio: 640/321;
+}
+.ar-3103-1907, .ar-3103-1907 img {
+  aspect-ratio: 3103/1907;
+}
+.ar-271-210, .ar-271-210 img {
+  aspect-ratio: 271/210;
+}
+.ar-74-43, .ar-74-43 img {
+  aspect-ratio: 74/43;
+}
+.ar-542-305, .ar-542-305 img {
+  aspect-ratio: 542/305;
+}
+.ar-4-3, .ar-4-3 img {
+  aspect-ratio: 4/3;
+}
+
 
 /*** ////////    CURSOR HOVER EFFECTS    //////// ***/
 
